Actions
Bug #4853
closedillumos-gate is not lint-clean when built with openssl 1.0
Start date:
2014-05-07
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
illumos-gate can be built against openssl 1.0 and works properly, but lint produces some warnings:
"../../../common/net/wanboot/boot_http.c", line 2257: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 2502: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3642: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3724: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3745: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3776: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3780: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 3958: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4236: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4277: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4301: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4332: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4344: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 4360: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/openssl_spi.c", line 5427: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "../common/security.c", line 113: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "/export/home/alp/srcs/oi-userland/components/illumos/illumos-gate/illumos-gate/usr/src/lib/libkmf/plugins/kmf_openssl/common/openssl_spi.c", line 3781: warning: function returns value which is always ignored: sk_set (E_FUNC_RET_ALWAYS_I GNOR2) "p12split.c", line 265: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "p12split.c", line 379: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "p12split.c", line 385: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "p12split.c", line 589: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "p12split.c", line 596: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "wanboot-cgi.c", line 1093: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED) "wanboot-cgi.c", line 880: warning: lint suppression directive not used (E_SUPPRESSION_DIRECTIVE_UNUSED)
Updated by Alexander Pyhalov about 8 years ago
Webrev is here: http://cr.illumos.org/~webrev/alp/4853/
Updated by Electric Monk about 8 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit a65cd518c5d0f30c53594a7022eb0f7d04c98cef
commit a65cd518c5d0f30c53594a7022eb0f7d04c98cef Author: Alexander Pyhalov <apyhalov@gmail.com> Date: 2014-05-19T14:55:53.000Z 4853 illumos-gate is not lint-clean when built with openssl 1.0 Reviewed by: Keith Wesolowski <keith.wesolowski@joyent.com> Reviewed by: Alexander Eremin <alexander.eremin@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>
Updated by Robert Mustacchi about 8 years ago
- Status changed from Closed to New
- Tags deleted (
needs-triage)
Updated by Marcel Telka almost 8 years ago
commit d7141854234c22ab8fe0547bf51a2f3a30781870 Author: Robert Mustacchi <rm@joyent.com> Date: Tue May 20 13:23:20 2014 -0700 backout 4853: breaks lint
Updated by Marcel Telka almost 8 years ago
- Category set to tools - gate/build tools
- Difficulty changed from Bite-size to Medium
Updated by Andy Fiddaman about 3 years ago
As support for running lint has now been removed, this can most likely be closed.
Actions