4853 illumos-gate is not lint-clean when built with openssl 1.0 Reviewed by: Keith Wesolowski <keith.wesolowski@joyent.com> Reviewed by: Alexander Eremin <alexander.eremin@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>